--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     >
 
     <application
+        android:name=".TodoApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,7 +17,7 @@
         tools:targetApi="31"
         >
         <activity
-            android:name=".MainActivity"
+            android:name=".TodoMainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.TodoApplication"
